SemanticAnalyzer/tests/success/herencia.java
class A {
         var int n;
         
         dynamic int getN()
         {
                 return n;
         }
}

class B extends A {
         dynamic void printN()
         var int num;
         {
                 num = (getN());
                 (System.printI(num));
         }

	static void main()
	{
	}
}
