SemanticAnalyzer/tests/fail/herencia_conflictiva03.java
class A {
	var int a, b;
	
	A()
	{}

	dynamic boolean methoda1(int a, int c)
	{}

}

class B extends A {
	var boolean a, b;
	
	B()
	{}

	static void main()
	{}

	dynamic boolean methoda1(int a, int b)
	{}
}
